Removed validation summary and validation blocks negative margin due to alignment issues

--- a/assets/sass/elements/forms/_form-validation.scss
+++ b/assets/sass/elements/forms/_form-validation.scss
@@ -50,13 +50,13 @@
 
 
   .validation-summary {
-  	margin: 0 -1em 1em;
+  	margin: 0 0 1em;
   	padding: 1em;
   }
 
 
   .validation {
-  	margin: 0 -1em .5em;
+  	margin: 0 0 .5em;
   	padding: .75em 1em 1em;
   }
 
